objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>Accept_QR_Codes_at_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accept QR Codes at Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accommodation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accommodation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accommodation_costs__c</fullName>
        <label>Accommodation costs</label>
        <summarizedField>Event_Costs__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Event_Costs__c.Type__c</field>
            <operation>equals</operation>
            <value>Accommodation costs</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Costs__c.Event_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Active Events allow Event Team Members to add Proposed Invitees to the Event</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Budget__c</fullName>
        <description>Actual Budget</description>
        <inlineHelpText>Actual Budget for Event</inlineHelpText>
        <label>Actual Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Number_Of_Partners__c</fullName>
        <label>Actual Number Of Partners</label>
        <summarizedField>Delegate__c.Actual_Number_Of_Partners__c</summarizedField>
        <summaryForeignKey>Delegate__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Additional_Options_1_Name__c</fullName>
        <inlineHelpText>Label used on web pages when additional option 1 is in use, i.e. &quot;Shirt Size&quot;</inlineHelpText>
        <label>Additional Options 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Options_1__c</fullName>
        <inlineHelpText>Semi-colon separated list of additional options for the delegate to select.</inlineHelpText>
        <label>Additional Options 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Options_2_Name__c</fullName>
        <inlineHelpText>Label used on web pages when additional option 2 is in use.</inlineHelpText>
        <label>Additional Options 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Options_2__c</fullName>
        <inlineHelpText>Semi-colon separated list of additional options 2 for the delegate to select.</inlineHelpText>
        <label>Additional Options 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Administrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optional administrator for the event - used for internal notifications</description>
        <inlineHelpText>Optional administrator for the event - used for internal notifications</inlineHelpText>
        <label>Administrator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Events_Administered</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allow_Badge_Reprints__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Badge Reprints</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Booking_Online_for_New_Customers__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow Online Bookings for New Customers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Delegate_to_be_Invoiced_in_Forex__c</fullName>
        <label>Allow Delegate to be Invoiced in Forex</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allow_Partners__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Partners</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Pre_Reg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Pre-Reg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Budget__c</fullName>
        <description>Approved Budget</description>
        <inlineHelpText>Approved Budget for Event</inlineHelpText>
        <label>Approved Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ask_for_additional_options_1__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set to true if there are additional options.</inlineHelpText>
        <label>Ask for additional options 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Badge_Style__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Select the badge template to be used for printed badges for this event</inlineHelpText>
        <label>Badge Style</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a valid badge</errorMessage>
            <filterItems>
                <field>Event_Configuration__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Event Badges</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Event_Configuration__c</referenceTo>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Badges__c</fullName>
        <label>Badge Printing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Pre-Printed</fullName>
                </value>
                <value>
                    <fullName>Print on Demand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bhalisa_Checkin_Page__c</fullName>
        <formula>&apos;https://cloudsmiths.secure.force.com/EventReg/Bha_Checkin?eventid=&apos;+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bhalisa Checkin Page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Confirmation_Fields__c</fullName>
        <label>Booking Confirmation Fields</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Event_Fields</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booking_Confirmation_Mandatory_Fields__c</fullName>
        <label>Booking Confirmation Mandatory Fields</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Event_Fields</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calendar_End_Date__c</fullName>
        <description>Used to build calendar invite date/time link</description>
        <formula>RIGHT(TEXT( End_Date__c), 2)&amp;&quot;-&quot;&amp; MID(TEXT( End_Date__c ), 6, 2)&amp;&quot;-&quot;&amp;LEFT( TEXT( End_Date__c ) , 4)+&quot; &quot;+LEFT(Text( EventEndTime__c),5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calendar End Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Organiser_Email__c</fullName>
        <label>Calendar Organiser Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Calendar_Organiser_Name__c</fullName>
        <label>Calendar Organiser Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Start_Date__c</fullName>
        <formula>RIGHT(TEXT( Start_Date__c), 2)&amp;&quot;-&quot;&amp; MID(TEXT( Start_Date__c ), 6, 2)&amp;&quot;-&quot;&amp;LEFT( TEXT( Start_Date__c ) , 4)+&quot; &quot;+ LEFT(TEXT(EventStartTime__c),5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calendar Start Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <label>Campaign Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity_Status__c</fullName>
        <formula>IF(Number_Registered__c &lt; Capacity__c*0.9, &quot;Available&quot;, 
   IF (Number_Registered__c &lt; Capacity__c, &quot;Limited&quot;, 
          IF (Number_Registered__c = Capacity__c, &quot;Full&quot;, &quot;Overbooked&quot;)
       )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capacity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Event Capacity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Certificate_Background_Override_Doc_Id__c</fullName>
        <inlineHelpText>This is the (15 or 19 digit) Id of the Salesforce Document to be used as the Background for the Certificate</inlineHelpText>
        <label>Certificate Background Override Doc Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Hours__c</fullName>
        <inlineHelpText>Leave Blank if the number of hours should not be displayed on the Certificate</inlineHelpText>
        <label>Certificate Hours</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Title__c</fullName>
        <label>Certificate Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_In_Confirmation_Fields__c</fullName>
        <label>Check In Confirmation Fields</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Event_Fields</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_In_Confirmation_Mandatory_Fields__c</fullName>
        <label>Check In Confirmation Mandatory Fields</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Event_Fields</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checking_Backgroud_URL__c</fullName>
        <label>Checking Backgroud URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Cities_For_Events</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Payment_Option__c</fullName>
        <inlineHelpText>Used to hold payment options for companies.</inlineHelpText>
        <label>Company Payment Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Payment</fullName>
                </value>
                <value>
                    <fullName>Online Only</fullName>
                </value>
                <value>
                    <fullName>EFT Only</fullName>
                </value>
                <value>
                    <fullName>Online and EFT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compliance_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Compliance Approval</description>
        <inlineHelpText>Compliance Approval for Event</inlineHelpText>
        <label>Compliance Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conference_link__c</fullName>
        <label>Conference link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Cost_Centre_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost Centre Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Events_Functions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Centre__c</fullName>
        <label>Cost Centre</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_per_head__c</fullName>
        <label>Cost per head</label>
        <summarizedField>Event_Costs__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Event_Costs__c.Type__c</field>
            <operation>equals</operation>
            <value>Cost per head</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Costs__c.Event_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries_For_Events</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Delegate_Type__c</fullName>
        <label>Default Delegate Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegates_Invited_Count__c</fullName>
        <description>Roll up Summary of the total number of delegates invited.</description>
        <label>Delegates Invited (Count)</label>
        <summaryFilterItems>
            <field>Delegate__c.RSVP_Status__c</field>
            <operation>equals</operation>
            <value>Invited, Yes, Maybe, No, N/A</value>
        </summaryFilterItems>
        <summaryForeignKey>Delegate__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Delivery_costs__c</fullName>
        <label>Delivery costs</label>
        <summarizedField>Event_Costs__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Event_Costs__c.Type__c</field>
            <operation>equals</operation>
            <value>Delivery costs</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Costs__c.Event_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dietary_Requirements_Payment_Message__c</fullName>
        <inlineHelpText>Message displayed next to the dietary requirements pick list describing the dietary requirements that require payments.</inlineHelpText>
        <label>Dietary Requirements Payment Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dietary_Requirements_Requiring_Payment__c</fullName>
        <inlineHelpText>Semi-colon separated list of dietary requirements that require payment when selected, leave blank if all are free.</inlineHelpText>
        <label>Dietary Requirements Requiring Payment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount_2__c</fullName>
        <label>Discount 2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Threshold_2__c</fullName>
        <label>Discount Threshold 2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Threshold__c</fullName>
        <label>Discount Threshold</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Do_Dietary_Requirements_Require_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick if there are dietary requirements that require payment. Please ensure there are merchandise types for the dietary requirements that require payment.</inlineHelpText>
        <label>Do Dietary Requirements Require Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DressCode__c</fullName>
        <label>Dress Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_Units__c</fullName>
        <label>Duration Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day(s)</fullName>
                    <default>true</default>
                    <label>Day(s)</label>
                </value>
                <value>
                    <fullName>Hour(s)</fullName>
                </value>
                <value>
                    <fullName>Minute(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <inlineHelpText>Enter value as per duration unit.</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmailBannerURL__c</fullName>
        <label>Email Banner URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time_Text__c</fullName>
        <formula>TEXT(HOUR(EventEndTime__c)) &amp; &quot;:&quot; &amp; IF(MINUTE(EventEndTime__c) &lt; 10, TEXT(MINUTE(EventEndTime__c)) &amp; &quot;0&quot;, TEXT(MINUTE(EventEndTime__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Time (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00</fullName>
                </value>
                <value>
                    <fullName>00:30</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>01:30</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>02:30</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>03:30</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>04:30</fullName>
                </value>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>05:30</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>06:30</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>07:30</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equities_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Equities Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimate_Number_Of_Partners_Per_Delegate__c</fullName>
        <label>Estimate Number Of Partners Per Delegate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Budget__c</fullName>
        <description>Estimated Budget for Event</description>
        <inlineHelpText>Estimated Budget for Event</inlineHelpText>
        <label>Estimated Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventEndTime__c</fullName>
        <label>Event End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>EventStartTime__c</fullName>
        <label>Event Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Event_Agenda__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Agenda</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Event_Configuration__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Event_Agenda</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Event_Configuration__c</referenceTo>
        <relationshipLabel>Events/Functions (Event Agenda)</relationshipLabel>
        <relationshipName>Events_Functions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Banner_Thumbnail__c</fullName>
        <formula>IMAGE( Web_Pages_Banner_URL__c , &apos;No Custom Banner&apos;, 30,100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Banner Thumbnail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Configuration__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Event Configuration</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Event_Configuration__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Event Config</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Event_Configuration__c</referenceTo>
        <relationshipLabel>Events/Functions (Event Configuration)</relationshipLabel>
        <relationshipName>Events1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Display_Time__c</fullName>
        <inlineHelpText>Override event start/end time on web pages and emails</inlineHelpText>
        <label>Event Display Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Email_Schedule_Count__c</fullName>
        <description>Roll up summary of the number of event email schedules</description>
        <label>Event Email Schedule (Count)</label>
        <summaryForeignKey>EM_Event_Email_Configuration__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Event_Host__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Event Host, if differs from Event Owner</description>
        <inlineHelpText>Event Host, if differs from Event Owner</inlineHelpText>
        <label>Event Host</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Event_Host</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Objectives__c</fullName>
        <label>Event Objectives</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Sessions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick if this event has sessions that delegates can book for linked to it.</inlineHelpText>
        <label>Event Sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                    <default>true</default>
                    <label>Planning</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Team_Members_Count__c</fullName>
        <description>Roll up summary of the number of event team members</description>
        <label>Event Team Members (Count)</label>
        <summaryForeignKey>Event_Team_Member__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>External_Booking_Link__c</fullName>
        <inlineHelpText>3rd Party Booking Link for Event Registration</inlineHelpText>
        <label>External Booking Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>External_Speaker_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>External Speaker Approval by GPOC</description>
        <inlineHelpText>E-mail Compliance on (BAGLgiftsandentertainment@absa.co.za) To gain approval for the External Speaker – Minimum 5 days required.
Please be reminded that no activation of an event will take place prior to GPOC approval.</inlineHelpText>
        <label>External Speaker Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Speaker_Description__c</fullName>
        <description>External Speaker Description</description>
        <inlineHelpText>External Speaker Description</inlineHelpText>
        <label>External Speaker Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_Speaker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>External Speaker</description>
        <inlineHelpText>E-mail Compliance on (BAGLgiftsandentertainment@absa.co.za) To gain approval for the External Speaker – Minimum 5 days required.
Please be reminded that no activation of an event will take place prior to GPOC approval.</inlineHelpText>
        <label>External Speaker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FICC_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FICC Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flights__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flights</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GPOC_Approval__c</fullName>
        <label>GPOC Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gifts_Entertainment_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gifts/Entertainment Approval</description>
        <inlineHelpText>E-mail Compliance on (BAGLgiftsandentertainment@absa.co.za) To gain approval for Gifts and/or Entertainment – Minimum 5 days required.
Please be reminded that no activation of an event will take place prior to GPOC approval.</inlineHelpText>
        <label>Gifts/Entertainment Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gifts_Entertainment_Description__c</fullName>
        <description>Gifts/Entertainment Description</description>
        <inlineHelpText>Gifts/Entertainment Description</inlineHelpText>
        <label>Gifts/Entertainment Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gifts_Entertainment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gifts/Entertainment for the Event</description>
        <inlineHelpText>E-mail Compliance on (BAGLgiftsandentertainment@absa.co.za) To gain approval for the gifts &amp; entertainment – Minimum 5 days required.
Please be reminded that no activation of an event will take place prior to GPOC approval.</inlineHelpText>
        <label>Gifts/Entertainment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Leave &quot;unchecked&quot; to make this show on the Calendar, else tick to hide the event.</inlineHelpText>
        <label>Hide Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_Number_Passport_at_Booking__c</fullName>
        <label>ID Number/Passport at Booking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes - Mandatory</fullName>
                </value>
                <value>
                    <fullName>Yes - Optional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_have_read_Absa_Event_Governance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I have read Absa Event Governance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Individual_Payment_Option__c</fullName>
        <inlineHelpText>Used to hold payment options for companies when events are paid for.</inlineHelpText>
        <label>Individual Payment Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Payment</fullName>
                </value>
                <value>
                    <fullName>Online Only</fullName>
                </value>
                <value>
                    <fullName>EFT Only</fullName>
                </value>
                <value>
                    <fullName>Online and EFT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Event_Requestor__c</fullName>
        <formula>Requestor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Event Requestor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Trainer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Options__c</fullName>
        <label>Lead Source Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Maximum_Guests_Including_Partners__c</fullName>
        <formula>if
  (
  Maximum_Number_Of_Partners_Per_Delegate__c &gt; 0,
   if
    (
      Maximum_Number_Of_Partners_Per_Delegate__c  = 1,
      Maximum_Guests__c * 2, 
    Maximum_Guests__c  +  Maximum_Guests__c * Maximum_Number_Of_Partners_Per_Delegate__c  
    ),
  Maximum_Guests__c 
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maximum Guests Including Partners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>